Finished vision, might need tuning bu its good
Signed-off-by: Aditya Mangalampalli <aditya.mangalampalli@gmail.com>

--- a/TeamCode/build.gradle
+++ b/TeamCode/build.gradle
@@ -16,6 +16,10 @@ apply from: '../build.common.gradle'
 apply from: '../build.dependencies.gradle'
 
 android {
+
+    androidResources {
+        noCompress 'tflite'
+    }
     externalNativeBuild {
         cmake {
             path file('CMakeLists.txt')
