--- a/TeamCode/CMakeLists.txt
+++ b/TeamCode/CMakeLists.txt
@@ -3,9 +3,9 @@
 
 # Sets the minimum version of CMake required to build the native library.
 
-cmake_minimum_required(VERSION 3.19.0+)
+cmake_minimum_required(VERSION 3.10.0+)
 
-project(UltimateGoal)
+project(FreightFrenzy)
 
 set(CMAKE_VERBOSE_MAKEFILE on)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++17")
